force-app/main/default/objects/Accommodation__c/fields/Amenities__c.field-meta.xml
<CustomField>
    <fullName>Amenities__c</fullName>
    <label>Amenities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wi-Fi</fullName>
            </value>
            <value>
                <fullName>Washer</fullName>
            </value>
            <value>
                <fullName>Air Conditioner</fullName>
            </value>
            <value>
                <fullName>Kitchen</fullName>
            </value>
            <value>
                <fullName>Dryer</fullName>
            </value>
            <value>
                <fullName>Heating</fullName>
            </value>
            <value>
                <fullName>Dedicated Workspace</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>Iron</fullName>
            </value>
            <value>
                <fullName>Private Pool</fullName>
            </value>
            <value>
                <fullName>Balcony</fullName>
            </value>
            <value>
                <fullName>Spa</fullName>
            </value>
            <value>
                <fullName>Sauna</fullName>
            </value>
            <value>
                <fullName>Cinema Room</fullName>
            </value>
            <value>
                <fullName>Kitchenette</fullName>
            </value>
            <value>
                <fullName>Private Beach</fullName>
            </value>
            <value>
                <fullName>Tennis Court</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>