force-app/main/default/objects/Accommodation__c/fields/PricePerDay__c.field-meta.xml
<CustomField>
    <fullName>PricePerDay__c</fullName>
    <label>Price per Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>